# simdfix

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  readme.md  todo.md
.github/workflows/: ci.yml
cmake/: SimdFixConfig.cmake.in
doc/: 0-overview.md  1-background.md  2-architecture.md  3-performance.md  4-failover.md  5-virtual.md  6-detailed-architecture.md  architecture.dot  architecture.md  codec-perf.md  failover.md  performance.md  todo.md  virtual.md
src/: PERFORMANCE.md  TODO.md  coverage.md  performance.md  todo.md
src/generator/org/limitless/generator/fix/: ConfigMapping.hpp  DataModel.hpp  FixGenerator.cpp  Generator.cpp  Generator.hpp  Processor.hpp
src/generator/org/limitless/generator/simdifx/: ConfigMapping.hpp  DataModel.hpp  FixGenerator.cpp
src/generator/resources/: config.xml  protocol.xml  protoxol.xml  session.xml  test.xml  zz
src/main/cpp/org/limitless/fix/: CodecTypes.hpp  DecoderTypes.hpp  Fix.hpp  TokenizedMessage.hpp  Types.hpp
src/main/cpp/org/limitless/fix/config/: FixConfig.hpp  FixEngine.hpp
src/main/cpp/org/limitless/fix/decoder/: ComponentDecoder.hpp  DataDecoder.hpp  Decoder.hpp  DecoderStatus.hpp  DecoderTypes.hpp  Dictionary.hpp  FieldDecoder.hpp  GroupDecoder.hpp  MessageDecoder.hpp  PayloadDecoder.hpp  PayloadHandler.hpp  Result.hpp  StructDecoder.hpp  Token.hpp  Tokens.hpp
src/main/cpp/org/limitless/fix/detail/: ByteSwap.hpp  Expected.hpp  Tokens.hpp
src/main/cpp/org/limitless/fix/detail/decoder/: FieldDecoder.hpp
src/main/cpp/org/limitless/fix/detail/encoder/: FieldEncoder.hpp  PayloadEncoder.hpp
src/main/cpp/org/limitless/fix/detail/parser/: FieldDecoder.hpp
src/main/cpp/org/limitless/fix/detail/simd/: LinearSearch.hpp  Uint8x16_neon.inl  Uint8x16_sse.inl
src/main/cpp/org/limitless/fix/encoder/: ComponentEncoder.hpp  DataEncoder.hpp  FieldEncoder.hpp  GroupEncoder.hpp  MessageEncoder.hpp  PayloadEncoder.hpp
src/main/cpp/org/limitless/fix/messages/: Dictionary.hpp  FixConfig.hpp  FixEngine.hpp  FixMessageDecoders.hpp  FixMessageEncoders.hpp  FixMessageHandler.hpp  FixTypes.hpp  Grammar.hpp  HeaderDecoder.hpp  HopGroupDecoder.hpp  Logon.hpp  LogonDecoder.hpp  LogoutDecoder.hpp  MessageDecoders.hpp  MessageHandler.hpp  MessageTypes.hpp
src/main/cpp/org/limitless/fix/parser/: BitSet64.hpp  Block.hpp  Decoder.cpp  Decoder.hpp  Dictionary.hpp  GroupDecoder.hpp  Message.hpp  MessageDecoder.hpp  Parser.cpp  Parser.h  Parser.hpp  ParserStatus.hpp  PerfectHashMap.hpp  Token.hpp  Tokenizer.cpp  Tokenizer.h  Tokenizer.hpp  Uint8x16.hpp  Utils.cpp  Utils.h  Utils.hpp
src/main/cpp/org/limitless/fix/session/: ClientSession.cpp  ClientSession.hpp  ServerSession.cpp  ServerSession.hpp  Session.cpp  Session.hpp
src/main/cpp/org/limitless/fix/simd/: LinearSearch.hpp  QuadSearch.hpp  Uint16x8.hpp  Uint8x16.hpp  Uint8x16_neon.inl  Uint8x16_sse.inl
src/main/cpp/org/limitless/fix/storage/: MemoryStorage.hpp  Storage.hpp
src/main/cpp/org/limitless/fix/unused/: BitSet64.hpp  QuadSearch.hpp
src/main/cpp/org/limitless/fix/utils/: BitSet64.hpp  Conversions.hpp  FixedDecimal.hpp  NullableInt.hpp  OptionalInt.hpp  Utils.hpp
src/main/cpp/org/limitless/simdifx/: Fix.hpp  TokenizedMessage.hpp  Types.hpp
src/main/cpp/org/limitless/simdifx/decoder/: DataDecoder.hpp  GroupDecoder.hpp  MessageDecoder.hpp  PayloadDecoder.hpp  PayloadHandler.hpp
src/main/cpp/org/limitless/simdifx/detail/: ByteSwap.hpp  Expected.hpp  Tokens.hpp
src/main/cpp/org/limitless/simdifx/detail/encoder/: FieldEncoder.hpp
src/main/cpp/org/limitless/simdifx/detail/parser/: FieldDecoder.hpp
src/main/cpp/org/limitless/simdifx/detail/simd/: LinearSearch.hpp  Uint8x16.hpp  Uint8x16_neon.inl  Uint8x16_sse.inl
src/main/cpp/org/limitless/simdifx/encoder/: DataEncoder.hpp  GroupEncoder.hpp  MessageEncoder.hpp  PayloadEncoder.hpp
src/main/cpp/org/limitless/simdifx/utils/: Conversions.hpp  FixedDecimal.hpp  OptionalInt.hpp
src/test/cpp/org/limitless/fix/benchmark/: SimdFixBench.cpp  SimdFixBenchmark.cpp  TimestampBenchmark.cpp
src/test/cpp/org/limitless/fix/decoder/: FieldDecoderTest.cpp  GroupDecoderTest.cpp  MessageDecoderTest.cpp  PayloadDecoderFuzzTest.cpp  PayloadDecoderTest.cpp
src/test/cpp/org/limitless/fix/encoder/: MessageEncoderTest.cpp
src/test/cpp/org/limitless/fix/parser/: BitSetTest.cpp  DecoderTest.cpp  ParserTest.cpp  PerfectHashMapTest.cpp  TokenizerTest.cpp
src/test/cpp/org/limitless/fix/session/: SessionTest.cpp
src/test/cpp/org/limitless/fix/simd/: LinearSearchTest.cpp  Uint8x16Test.cpp
src/test/cpp/org/limitless/fix/storage/: MemoryStorageTest.cpp
src/test/cpp/org/limitless/fix/utils/: BitSetTest.cpp  ConversionsTest.cpp  FixedDecimalTest.cpp  NullableIntTest.cpp  OptionalIntTest.cpp  UtilsTest.cpp
src/test/cpp/org/limitless/simdifx/benchmark/: SimdFixBenchmark.cpp  TimestampBenchmark.cpp
src/test/cpp/org/limitless/simdifx/decoder/: FieldDecoderTest.cpp  GroupDecoderTest.cpp  MessageDecoderTest.cpp  PayloadDecoderFuzzTest.cpp  PayloadDecoderTest.cpp
src/test/cpp/org/limitless/simdifx/encoder/: MessageEncoderTest.cpp
src/test/cpp/org/limitless/simdifx/simd/: LinearSearchTest.cpp  Uint8x16Test.cpp
src/test/cpp/org/limitless/simdifx/utils/: BitSetTest.cpp  ConversionsTest.cpp  FixedDecimalTest.cpp  OptionalIntTest.cpp
